--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,14 @@
-customtkinter
-firebase-admin
-pillow
-opencv-python
-python-dateutil
-pandas
-openpyxl
-tkcalendar
-pyfingerprint
-pyserial
-pywin32
+customtkinter==5.2.2
+Pillow==10.2.0
+opencv-python==4.8.1.78
+firebase-admin==6.2.0
+tkcalendar==1.6.1
+pywin32==306; sys_platform == 'win32'
+pandas==2.1.4
+openpyxl==3.1.2
+pyrebase4==4.7.1
+PyFingerprint==1.5
+pyserial==3.5
+bcrypt==4.1.2
+python-dotenv==1.0.0
+Flask==2.3.3
